Fix TSAsExpression being filtered out.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-    <!-- All of this is completely replaced after we render -->
     <body>
+        <div id="root"></div>
         <script type="application/javascript" src="/index.js"></script>
     </body>
 </html>
